[package]
name = "bq-sink"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BigQuery load-job sink with ADC auth and Secret Manager access"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
gcp_auth.workspace = true
async-trait.workspace = true
base64.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
