[package]
name = "clarify-bq-client"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["api-bindings"]
readme = "../../README.md"
description = "Internal support crate for the clarify-bq CLI (Clarify API access); no stability guarantees"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
