[package]
name = "clarify-bq-sink"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["api-bindings"]
readme = "../../README.md"
description = "Internal support crate for the clarify-bq CLI (BigQuery load jobs); no stability guarantees"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
gcp_auth.workspace = true
async-trait.workspace = true
base64.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
