[package]
name = "clarify-bq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]
readme = "../../README.md"
description = "Append-only backup of a Clarify CRM workspace into BigQuery (unofficial)"

[dependencies]
clarify-client = { path = "../clarify-client", version = "0.1.0" }
bq-sink = { path = "../bq-sink", version = "0.1.0" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fs2.workspace = true
directories.workspace = true
humantime.workspace = true
futures.workspace = true
reqwest.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
