[package]
name = "clarify-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async client for the Clarify CRM REST API (unofficial)"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
